<resources>
    <string name="app_name">TsecHacksApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="branch">
        <item>Computer Science and Engineering</item>
        <item>Computer Engineering</item>
        <item>Information Technology</item>
        <item>Artificial Intelligence and Data Science</item>
        <item>Mechanical Engineering</item>
        <item>Electronics</item>
        <item>Electronics and Telecommunication</item>
        <item>Civil Engineering</item>
        <item>Chemical Engineering</item>

    </string-array>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="learning_concepts_with_ease">Learning Concepts with ease</string>
    <string name="topics">Topics</string>
    <string name="stack">Stack</string>
    <string name="queue">Queue</string>
    <string name="quick_sort">Quick Sort</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="list_item">List Item</string>
    <string name="ctrl_intelligence">Ctrl Intelligence</string>
    <string name="_300">300</string>
    <string name="reward_name">Reward name</string>
    <string name="submit">SUBMIT</string>
    <string name="event">Event</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="rank">Rank</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="go_to_leaderboard">Go to LeaderBoard</string>
    <string name="upcoming_events">UPCOMING EVENTS</string>
    <string name="start_time_of_event">Start Time Of Event</string>
    <string name="name_of_event">Name Of Event</string>
    <string name="end_time_of_event">End Time of Event</string>
    <string name="duration_of_event">Duration Of Event</string>
    <string name="start_time_n_of_event">Start Time \n Of Event</string>
    <string name="end_time_n_of_event">End Time \n Of Event</string>

</resources>