<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#E5E5E5">
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:textAllCaps="true"
        android:text="@string/name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:textAllCaps="true"
        android:padding="5dp"
        android:text="@string/score"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginLeft="85dp"
        android:padding="5dp"
        android:textAllCaps="true"
        android:text="@string/rank"
        android:textSize="20sp"
        />

    </LinearLayout>


</LinearLayout>